# deadpool-emp-management-backend

./: .gitignore  .infisical.json  README.md  pyproject.toml  requirements.txt
src/: auth0.py  main.py  settings.py
src/dependencies/: auth0.py  infisical.py  supabase.py
src/routes/employees/: models.py  router.py
src/routes/job_applications/: router.py
src/routes/leaves/: router.py
src/routes/roles/: router.py
